Fixed beta ribbon visibility issue

--- a/client/app/style.css
+++ b/client/app/style.css
@@ -1,4 +1,4 @@
-body:after{
+#luxire-beta-ribbon{
   content: "beta";
   position: fixed;
   width: 80px;
@@ -16,6 +16,7 @@ body:after{
   -ms-transform:rotate(-45deg);
   -webkit-transform:rotate(-45deg);
   transform:rotate(-45deg);
+  z-index: 99999999;
 }
 
 html {
